clean workspace double check question added

--- a/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
+++ b/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
@@ -125,7 +125,7 @@
 
     <ul class="right">
             {% csrf_token %}
-            <a class="button alert" href="javascript:void(0);" onclick="req_delete()">Clear Workspace</a>
+            <a class="button alert" href="javascript:void(0);" onclick="double_check_delete()">Clear Workspace</a>
     </ul>
 
 </nav>
