--- a/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
+++ b/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
@@ -202,8 +202,12 @@
                         the GNU General Public License, Copyright 2017 Vafa Andalibi, Henri Hokkanen and Simo Vanni.
                         To access the documentation of the CxSystem, please check out the readthedocs page of the
                         project.
+                        <h5> Documentation and Tutorial</h5>
+                        CxSystem's documentation is available at <a href="https://cxsystem2.readthedocs.io/en/latest">readthedocs</a>. A good place
+                        to start learning how to use CxSystem is the <a href="https://cxsystem2.readthedocs.io/en/latest/tutorials.html">tutorial
+                        page</a>.
                     </p>
-                    <br>
+
                     <br>
                     <br>
                     <hr>
