status of simulations window added

--- a/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
+++ b/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
@@ -326,7 +326,11 @@
     </div>
 </div>
 
-<div id="export_config_container" style="display:none;"></div>
+<div id="export_config_container" style="display:none;"> </div>
+<div id="simulation_status">
+    <div id="simulation_statusheader"> Status of Simulations</div>
+    <div id="simulation_status_texts">haha </div>
+</div>
 
 <!--    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>-->
 
