--- a/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
+++ b/cxsystem2/bui/cx_bui/editor/templates/editor/index.html
@@ -120,7 +120,7 @@
 
     <ul class="right">
             {% csrf_token %}
-            <a class="button secondary" href="javascript:void(0);" onclick="req_simstatus()">Simulations Output</a>
+            <a class="button secondary" href="javascript:void(0);" onclick="req_simoutput()">Simulations Output</a>
     </ul>
 
     <ul class="right">
@@ -326,12 +326,14 @@
     </div>
 </div>
 
+{% if is_secure %}
 <div id="export_config_container" style="display:none;"> </div>
+
 <div id="simulation_status">
     <div id="simulation_statusheader"> Status of Simulations</div>
-    <div id="simulation_status_texts">haha </div>
+    <div id="simulation_status_texts"></div>
 </div>
-
+{% endif %}
 <!--    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>-->
 
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.5.11/split.min.js"></script> -->
