--- a/cxsystem2/bui/cx_bui/static/css/style.css
+++ b/cxsystem2/bui/cx_bui/static/css/style.css
@@ -174,11 +174,10 @@ button.tabs__button--active {
     z-index: 2;
     resize: both;
     overflow: auto;
-    background-color: #333;
+    background-color: #f2f2f2;
 }
 
 #simulation_status_texts {
-    color: white;
     padding: 5px;
 }
 
