removing resizability of status window

--- a/cxsystem2/bui/cx_bui/static/css/style.css
+++ b/cxsystem2/bui/cx_bui/static/css/style.css
@@ -172,7 +172,7 @@ button.tabs__button--active {
     height: 200px;
     border: solid #333;
     z-index: 2;
-    resize: both;
+    /*resize: both;*/
     overflow: auto;
     background-color: #f2f2f2;
 }
