--- a/cxsystem2/bui/cx_bui/static/css/style.css
+++ b/cxsystem2/bui/cx_bui/static/css/style.css
@@ -192,3 +192,29 @@ button.tabs__button--active {
     background-color: #2196F3;
     color: #fff;
 }
+
+.ShowHide {
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #1963D1;
+  color: #FFFFFF;
+  padding:4px;
+}
+#left {
+  overflow: hidden;
+  text-align: center;
+  height: 20px;
+}
+#right {
+  float: right;
+  width: 30px;
+  height: 20px;
+  text-align: center;
+}
+.ShowHide a {
+   color: #FFFFFF;
+   text-decoration: none;
+}
+.ShowHide a:hover {
+   text-decoration:underline;
+}
