--- a/cxsystem2/bui/cx_bui/static/css/style.css
+++ b/cxsystem2/bui/cx_bui/static/css/style.css
@@ -194,11 +194,21 @@ button.tabs__button--active {
 }
 
 .ShowHide {
+    display: block;
+    padding: 2px;
+    position: fixed;
+    width: calc(40% - 5px);
+    cursor: move;
+    z-index: 3;
+    text-align: center;
+    background-color: #2196F3;
+    color: #fff;
+
   overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #1963D1;
-  color: #FFFFFF;
-  padding:4px;
+  /*background-color: #1963D1;*/
+  /*color: #FFFFFF;*/
+  /*padding:4px;*/
 }
 #left {
   overflow: hidden;
@@ -207,6 +217,7 @@ button.tabs__button--active {
 }
 #right {
   float: right;
+    margin-right: 15px;
   width: 30px;
   height: 20px;
   text-align: center;
